--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock-Paper-Scissors</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-gray-200">
+    <div class="w-1/2 mx-auto bg-white mt-16 p-4 relative">
+      <!-- Top Div -->
+      <div class="flex justify-between items-center mb-4">
+        <div>Comp Avatar</div>
+        <div class="absolute left-1/3 w-56 h-40 border-2 border-black">
+          Score Board
+        </div>
+        <div>User Avatar</div>
+      </div>
+
+      <!-- Selection Icon Div -->
+      <div class="flex justify-between items-center mb-16">
+        <div>Comp Selection</div>
+        <div>User Selection</div>
+      </div>
+
+      <!-- Status Pop-up Div -->
+      <div class="flex justify-center items-center mb-4">
+        <div>Status Pop-Up</div>
+      </div>
+
+      <!-- User Choice Icons Div -->
+      <div class="flex justify-center gap-2 items-center">
+        <div>Rock</div>
+        <div>Paper</div>
+        <div>Scissor</div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
