--- a/index.html
+++ b/index.html
@@ -8,32 +8,44 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-200">
-    <div class="w-1/2 mx-auto bg-white mt-16 p-4 relative">
+    <div class="w-1/2 mx-auto bg-white mt-16 p-8 relative">
       <!-- Top Div -->
       <div class="flex justify-between items-center mb-4">
-        <div>Comp Avatar</div>
-        <div class="absolute left-1/3 w-56 h-40 border-2 border-black">
-          Score Board
+        <div>
+          <img src="images/icons8-robot-100.png" alt="" />
         </div>
-        <div>User Avatar</div>
+        <div class="w-56 h-40 border-2 border-black">Score Board</div>
+        <div>
+          <img src="images/icons8-user-100.png" alt="" />
+        </div>
       </div>
 
       <!-- Selection Icon Div -->
-      <div class="flex justify-between items-center mb-16">
-        <div>Comp Selection</div>
-        <div>User Selection</div>
+      <div class="flex justify-between items-center mb-16 px-4">
+        <div>
+          <img src="images/paper.png" alt="" width="50" height="50" />
+        </div>
+        <div>
+          <img src="images/scissor.png" alt="" width="50" height="50" />
+        </div>
       </div>
 
       <!-- Status Pop-up Div -->
       <div class="flex justify-center items-center mb-4">
-        <div>Status Pop-Up</div>
+        <div class="border-4 border-black p-4 text-center">
+          Hurray! You Won!
+        </div>
       </div>
 
       <!-- User Choice Icons Div -->
-      <div class="flex justify-center gap-2 items-center">
-        <div>Rock</div>
-        <div>Paper</div>
-        <div>Scissor</div>
+      <div
+        class="flex justify-center gap-8 p-4 items-center border-4 border-black"
+      >
+        <div><img src="images/rock.png" alt="" width="50" height="50" /></div>
+        <div><img src="images/paper.png" alt="" width="50" height="50" /></div>
+        <div>
+          <img src="images/scissor.png" alt="" width="50" height="50" />
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
