--- a/index.html
+++ b/index.html
@@ -75,8 +75,22 @@
         </div>
       </div>
 
-      <!-- Total Score Div -->
-      <div class="absolute"></div>
+      <!-- Total Score Div (Modal) -->
+      <div
+        class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50"
+      >
+        <div
+          class="bg-white border-2 p-4 z-10 w-80 h-56 drop-shadow-lg text-center"
+        >
+          <div class="text-4xl kanit-extrabold mb-8">Game Over</div>
+          <div class="mb-8 kanit-semibold text-lg">You won</div>
+          <button
+            class="px-4 py-2 border-2 border-black kanit-semibold text-lg"
+          >
+            Play Again
+          </button>
+        </div>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
